# playgent-sandboxes

./: README.md
bootstrapping/: clean_synthetic.sh  gen_data.py  gen_data_from_scenario.py  gen_data_from_seed.py  gen_data_from_task.py  llm_access.py
bootstrapping/airtable/: airtable_data_seed.json  airtable_schema.json
bootstrapping/gmail/: gmail_data_seed.json  gmail_data_synthetic.json  gmail_logger.txt  gmail_message_schema.json
environment-coding-agent/: blaxel.toml  pyproject.toml
environment-coding-agent/src/: error.py  gmail_api.py  main.py  scenario_agent_prompt.txt  system_prompt.txt
environment-coding-agent/src/templates/: __init__.py
environment-coding-agent/src/templates/sandbox/: mcp_server.py  state_helpers.py
environment-coding-agent/src/templates/sandbox/actions/: __init__.py  airtable.py  asana.py  custom.py  github.py  gmail.py  jira.py  linear.py  notion.py  quickbooks.py  salesforce.py  slack.py
gmail/: .gitignore  ARCHITECTURE.md  Dockerfile  GMAIL_API.md  README.md  entrypoint.sh  quickstart.ts  tsconfig.gmail.json  tsconfig.json
gmail/examples/: README.md  seed-gmail.ts
gmail/src/gmail/: drafts.ts  index.ts  messages.ts  types.ts
sandboxing-agent/: README.md  blaxel.toml  package.json  pnpm-lock.yaml
sandboxing-agent/src/: index.ts
synthetic-data-gen/: pyproject.toml
synthetic-data-gen/batches/: sample-batch.json
synthetic-data-gen/src/: dag_builder.py  main.py  scenario_planner.py
