[project]
name = "template-job-py"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.76.0",
    "blaxel[core,telemetry]==0.2.32",
    "openai>=2.15.0",
    "supabase>=2.27.2",
]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
